@@ -1,5 +1,13 @@
 2000-01-13  Havoc Pennington  <hp@redhat.com>
 
+	* gconf/gconf-internals.c (gconf_concat_key_and_dir): move
+	declaration to public header
+
+	* doc/gconf/tmpl/gconf-client.sgml: Document the changed
+	dir add/remove behavior
+
+2000-01-13  Havoc Pennington  <hp@redhat.com>
+
 	* backends/xml-dir.c (dir_load): arguments to this were backward
 
 	* wrappers/gtk/gconf-client.c: keep a count of the number of times
